--- a/frontend/management/src/app/modules/admin/modules/products/pages/products/products.page.html
+++ b/frontend/management/src/app/modules/admin/modules/products/pages/products/products.page.html
@@ -45,7 +45,7 @@
             <a class="table-row" [routerLink]="product.id">
               <td class="image">
                 @if (product.images.length > 0) {
-                  <img [src]="getImageUrl(product.images[0])" width="64" height="64" />
+                  <img [src]="getImageUrl(product.images[0]) | authImage | async" width="64" height="64" />
                 } @else {
                   <span class="image-placeholder">
                     <span class="material-icons">image</span>
