Restyle management app offer create and edit pages

--- a/frontend/management/src/app/modules/admin/modules/offers/pages/offer/offer.page.scss
+++ b/frontend/management/src/app/modules/admin/modules/offers/pages/offer/offer.page.scss
@@ -31,6 +31,12 @@ label {
   & > label {
     font-size: 0.8em;
   }
+
+  & > .form-field-content {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+  }
 }
 
 .product-link {
